crates/arf-console/src/snapshots/arf__cli__tests__help_history_import.snap
---
source: crates/arf-console/src/cli/mod.rs
expression: help
---
Import history from another source (experimental)

Import command history from radian, R's native .Rhistory, or another arf database. This is an experimental feature and the format may change in future versions.

Usage: import [OPTIONS] --from <FROM>

Options:
      --from <FROM>
          Source format to import from

          Possible values:
          - radian: radian history file (~/.radian_history)
          - r:      R native history file (.Rhistory)
          - arf:    Another arf SQLite history database

      --file <FILE>
          Path to the history file/database to import. Defaults: radian=~/.radian_history, r=.Rhistory, arf=persistent history `dir`/r.db

      --hostname <HOSTNAME>
          Override hostname for imported entries. Marks entries to distinguish them from native arf history

      --dry-run
          Perform a dry run without actually importing

      --import-duplicates
          Import duplicate entries instead of skipping them. By default, entries that already exist in the target database are skipped (anti-join on command text and timestamp)

      --unified
          Force unified mode for metadata-less legacy files (imports both R and shell history).
          
          Versioned arf metadata always identifies history databases and unified exports first. For metadata-less legacy files, the format is inferred by filename: - 'r.db' or 'shell.db' → single-database mode (one history type) - Other names (e.g., 'backup.db') → unified mode (both history types)
          
          Use this flag to force unified mode for metadata-less files even when named r.db/shell.db.

      --r-table <R_TABLE>
          Table name for R history when importing from unified export file
          
          [default: r]

      --shell-table <SHELL_TABLE>
          Table name for shell history when importing from unified export file
          
          [default: shell]

  -h, --help
          Print help (see a summary with '-h')
